--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -18,10 +18,10 @@
         [routerLink]="['settings']" *ngIf="isAppAdmin || isSuperAdmin">
         <span class="dsi dsi-settings text-secondary"></span>
       </button>
-      <button *ngIf="isExperimental" type="button" class="btn btn-white d-flex align-items-center border ml-3"
+      <!-- <button *ngIf="isExperimental" type="button" class="btn btn-white d-flex align-items-center border ml-3"
         (click)="toggleImportWizard=true">
         <span class="dsi dsi-upload text-secondary"></span>
-      </button>
+      </button> -->
       <button type="button" id="addNewDS" class="add-new btn btn-primary ml-3 d-flex align-items-center"
         (click)="newService()" *ngIf="hasCreatePermission('SM') && hasCreatePermission('CON')">
         <span class="dsi dsi-plus mr-2"></span>
@@ -221,6 +221,20 @@
         </ng-container>
       </div>
     </div>
+    <div class="mb-3 mt-2 d-flex align-items-center">
+      <div class="d-flex align-items-center hover mr-3" (click)="toggleSchemaType(false)">
+        <odp-round-radio size="18" [edit]="true" [checked]="form.get('schemaFree').value==false"
+          (checkedChange)="toggleSchemaType(false)">
+        </odp-round-radio>
+        <span class="text ml-2">Schema Based</span>
+      </div>
+      <div class="d-flex align-items-center hover" (click)="toggleSchemaType(true)">
+        <odp-round-radio size="18" [edit]="true" [checked]="form.get('schemaFree').value==true"
+          (checkedChange)="toggleSchemaType(true)">
+        </odp-round-radio>
+        <span class="text ml-2">Schema Free</span>
+      </div>
+    </div>
     <div class="form-group">
       <label class="font-13 text-secondary" for="category">Data Connector</label>
       <select id="data" class="form-control" (change)="selectConnector($event,'data')">
@@ -228,7 +242,7 @@
           [selected]="checkDefault(connector._id)">{{connector.name}}</option>
       </select>
     </div>
-    <div class="form-group">
+    <div class="form-group" *ngIf="!form.get('schemaFree').value">
       <label class="font-13 text-secondary" for="category">File Connector</label>
       <select id="file" class="form-control" (change)="selectConnector($event,'file')">
         <option [value]="connector._id" *ngFor="let connector of fileConnectors"
