--- a/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
@@ -23,6 +23,12 @@
         </div>
     </div>
     <div *ngIf="selectedNode && !nodeDataField">
+        <div class="my-3">
+            <button type="button" class="btn btn-link d-flex align-items-center p-0" (click)="selectNode(null)">
+                <span class="dsi dsi-arrow-left ml-2"></span>
+                <span>Back</span>
+            </button>
+        </div>
         <div class="list-group my-3">
             <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
                 (click)="selectNodeDataKey('statusCode')">
@@ -51,7 +57,14 @@
         </div>
     </div>
     <div *ngIf="selectedNode && nodeDataField">
-        <div class="form-group my-3" *ngIf="selectedNode && nodeDataField && (nodeDataField=='headers' || nodeDataField=='body')">
+        <div class="my-3">
+            <button type="button" class="btn btn-link d-flex align-items-center p-0" (click)="selectNodeDataKey(null)">
+                <span class="dsi dsi-arrow-left ml-2"></span>
+                <span>Back</span>
+            </button>
+        </div>
+        <div class="form-group my-3"
+            *ngIf="selectedNode && nodeDataField && (nodeDataField=='headers' || nodeDataField=='body')">
             <label for="fieldKey">Field</label>
             <input type="text" class="form-control" [(ngModel)]="tempDataKey" odpAutoFocus>
         </div>
