--- a/src/app/home/b2b-flows-manage/node-properties/add-headers/add-headers.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/add-headers/add-headers.component.html
@@ -19,21 +19,25 @@
                 <span class="">Add New</span>
             </button>
         </div>
-        <div *ngFor="let item of headerList" class="d-flex align-items-center mb-2">
-            <div class="header-key mr-3 position-relative">
+        <div *ngFor="let item of headerList;let i=index" class="d-flex align-items-center mb-2">
+            <div class="header-key mr-2 position-relative">
                 <input type="text" class="form-control" [(ngModel)]="item.key" placeholder="Header Key"
                     (keyup.enter)="addHeader()" odpAutoFocus>
             </div>
-            <div class="header-value w-100 position-relative">
+            <div class="header-value mr-2 w-100 position-relative">
                 <input type="text" class="form-control dynamic-variable-addon" [(ngModel)]="item.value"
                     placeholder="Header Value" (keyup.enter)="addHeader()">
                 <odp-node-data-selector class="node-data-selector" [edit]="edit" [nodeList]="nodeList"
                     [(value)]="item.value">
                 </odp-node-data-selector>
             </div>
+            <div class="header-action position-relative">
+                <button type="button" class="btn btn-link p-0" (click)="removeHeader(i)">
+                    <span class="dsi dsi-trash text-danger"></span>
+                </button>
+            </div>
         </div>
-        <button type="button" class="btn btn-primary d-flex align-items-center mt-4 w-100 justify-content-center"
-            [disabled]="headerList.length==0" (click)="save()">
+        <button type="button" class="btn btn-primary d-flex align-items-center mt-4 w-100 justify-content-center" (click)="save()">
             <span class="">Done</span>
         </button>
     </div>
