--- a/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/data-service-properties/data-service-properties.component.html
@@ -13,64 +13,80 @@
 </div>
 <ng-container *ngIf="currNode?.options?.dataService">
     <div class="d-flex flex-column">
-        <div class="form-group d-flex align-items-center">
+        <div class="form-group position-relative d-flex align-items-center">
             <odp-checkbox [edit]="edit" [(checked)]="currNode.options.get"
                 (checkedChange)="setDataServiceOperation('get',$event)"></odp-checkbox>
             <span class="ml-2 text-secondary">Fetch</span>
         </div>
-        <div class="form-group d-flex align-items-center">
+        <div class="form-group position-relative d-flex align-items-center">
             <odp-checkbox [edit]="edit" [(checked)]="currNode.options.update"
                 (checkedChange)="setDataServiceOperation('update',$event)"></odp-checkbox>
             <span class="ml-2 text-secondary">Update</span>
         </div>
-        <div class="form-group d-flex align-items-center">
+        <div class="form-group position-relative d-flex align-items-center">
             <odp-checkbox [edit]="edit" [(checked)]="currNode.options.insert"
                 (checkedChange)="setDataServiceOperation('insert',$event)"></odp-checkbox>
             <span class="ml-2 text-secondary">Insert</span>
         </div>
-        <div class="form-group d-flex align-items-center">
+        <div class="form-group position-relative d-flex align-items-center">
             <odp-checkbox [edit]="edit" [(checked)]="currNode.options.delete"
                 (checkedChange)="setDataServiceOperation('delete',$event)"></odp-checkbox>
             <span class="ml-2 text-secondary">Delete</span>
         </div>
     </div>
     <ng-container *ngIf="currNode.options.get">
-        <div class="form-group">
+        <div class="form-group position-relative ">
             <label for="select">Select</label>
-            <input id="select" type="text" class="form-control" [(ngModel)]="currNode.options.select">
+            <input id="select" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.select">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"
+                [(value)]="currNode.options.select">
+            </odp-node-data-selector>
             <small class="form-text text-muted">Provide Comma Separated Fields</small>
         </div>
-        <div class="form-group">
+        <div class="form-group position-relative ">
             <label for="count">Count</label>
-            <input id="count" type="number" class="form-control" [(ngModel)]="currNode.options.count">
+            <input id="count" type="number" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.count">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.count">
+            </odp-node-data-selector>
         </div>
-        <div class="form-group">
+        <div class="form-group position-relative ">
             <label for="sort">Sort</label>
-            <input id="sort" type="text" class="form-control" [(ngModel)]="currNode.options.sort">
+            <input id="sort" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.sort">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.sort">
+            </odp-node-data-selector>
             <small class="form-text text-muted">Provide Comma Separated Fields<br><i>(prefix: "-" for descending
                     order)</i></small>
+
         </div>
-        <div class="form-group">
+        <div class="form-group position-relative ">
             <label for="filter">Filter</label>
-            <textarea id="filter" class="form-control" [(ngModel)]="currNode.options.filter"></textarea>
+            <textarea id="filter" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.filter"></textarea>
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.filter">
+            </odp-node-data-selector>
         </div>
     </ng-container>
     <ng-container *ngIf="currNode.options.delete">
-        <div class="form-group">
+        <div class="form-group position-relative ">
             <label for="docId">ID</label>
-            <input id="docId" type="text" class="form-control" [(ngModel)]="currNode.options.documentId">
+            <input id="docId" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.documentId">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.documentId">
+            </odp-node-data-selector>
         </div>
     </ng-container>
     <ng-container *ngIf="currNode.options.update">
-        <div class="form-group">
+        <div class="form-group position-relative ">
             <label for="fields">Update Based on Fields</label>
-            <input id="fields" type="text" class="form-control" [(ngModel)]="currNode.options.fields">
+            <input id="fields" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.fields">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.fields">
+            </odp-node-data-selector>
         </div>
     </ng-container>
     <ng-container *ngIf="currNode.options.update || currNode.options.insert">
-        <div class="form-group">
+        <div class="form-group position-relative ">
             <label for="fields">Body</label>
-            <input id="fields" type="text" class="form-control" [(ngModel)]="currNode.options.body">
+            <input id="fields" type="text" class="form-control dynamic-variable-addon" [(ngModel)]="currNode.options.body">
+            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.body">
+            </odp-node-data-selector>
         </div>
     </ng-container>
 </ng-container>
