--- a/src/app/utils/data-structure-selector/data-structure-selector.component.html
+++ b/src/app/utils/data-structure-selector/data-structure-selector.component.html
@@ -10,6 +10,7 @@
                 (checkedChange)="onTypeChange('dataFormat')">
             </odp-round-radio>
             <span class="text ml-3">Data Schema</span>
+            <span *ngIf="format && selectedType=='dataFormat'" class="text-primary ml-3 hover font-11" (click)="changeDataFormat()">(change)</span>
         </div>
         <span *ngIf="format && selectedType=='dataFormat'"
             class="text-primary selected-format-name">({{format.name}})</span>
@@ -20,6 +21,7 @@
                 (checkedChange)="onTypeChange('customFormat')">
             </odp-round-radio>
             <span class="text ml-3">Custom</span>
+            <span *ngIf="format && selectedType=='customFormat'" class="text-primary ml-3 hover font-11" (click)="changeCustomFormat()">(change)</span>
         </div>
         <span *ngIf="format && selectedType=='customFormat'"
             class="text-primary selected-format-name">({{format.name}})</span>
@@ -36,24 +38,26 @@
 
 <div [ngClass]="{'show':showWindow,'more-width':selectedType=='customFormat'}"
     class="data-structure-window p-4 position-fixed bg-white border-left">
-    <ng-container *ngIf="selectedType=='dataFormat'">
-        <div class="d-flex align-items-center justify-content-between mb-4">
-            <span class="font-22 fw-600">Select Data Format</span>
-            <button type="button" class="btn btn-link" (click)="selectedType='generic'">
-                <span class="dsi dsi-close text-dark"></span>
-            </button>
-        </div>
-        <odp-data-format-selector [edit]="edit" [(format)]="format" (formatChange)="onFormatChange($event)">
-        </odp-data-format-selector>
-    </ng-container>
-    <ng-container *ngIf="selectedType=='customFormat'">
-        <div class="d-flex align-items-center justify-content-between mb-4">
-            <span class="font-22 fw-600">Create Custom Format</span>
-            <button type="button" class="btn btn-link" (click)="selectedType='generic'">
-                <span class="dsi dsi-close text-dark"></span>
-            </button>
-        </div>
-        <odp-custom-format-selector [edit]="edit" [(format)]="format" (formatChange)="onFormatChange($event)">
-        </odp-custom-format-selector>
+    <ng-container *ngIf="showWindow">
+        <ng-container *ngIf="selectedType=='dataFormat'">
+            <div class="d-flex align-items-center justify-content-between mb-4">
+                <span class="font-22 fw-600">Select Data Format</span>
+                <button type="button" class="btn btn-link" (click)="closeWindow()">
+                    <span class="dsi dsi-close text-dark"></span>
+                </button>
+            </div>
+            <odp-data-format-selector [edit]="edit" [(format)]="format" (formatChange)="onFormatChange($event)">
+            </odp-data-format-selector>
+        </ng-container>
+        <ng-container *ngIf="selectedType=='customFormat'">
+            <div class="d-flex align-items-center justify-content-between mb-4">
+                <span class="font-22 fw-600">Create Custom Format</span>
+                <button type="button" class="btn btn-link" (click)="closeWindow()">
+                    <span class="dsi dsi-close text-dark"></span>
+                </button>
+            </div>
+            <odp-custom-format-selector [edit]="edit" [(format)]="format" (formatChange)="onFormatChange($event)">
+            </odp-custom-format-selector>
+        </ng-container>
     </ng-container>
 </div>
