--- a/src/app/home/schema-utils/configuration/connector-settings/connector-settings.component.html
+++ b/src/app/home/schema-utils/configuration/connector-settings/connector-settings.component.html
@@ -8,6 +8,7 @@
     </div>
   </div>
 
+  <span class="font-14 fw-700 my-2">Schema Settings</span>
   <div class="mb-3 mt-2 d-flex align-items-center">
     <div class="d-flex align-items-center hover mr-3" (click)="toggleSchemaType(false)">
       <odp-round-radio size="18" [edit]="true" [checked]="form.get('schemaFree').value==false"
