--- a/src/app/home/agents/agents-log/agents-log.component.html
+++ b/src/app/home/agents/agents-log/agents-log.component.html
@@ -1,11 +1,11 @@
-<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+<!-- <div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
     <div class="align-self-center text-center">
         <div class="spinner-border text-dark" role="status">
             <span class="sr-only">Processing...</span>
         </div>
         <div class="text-secondary mt-2">Processing...</div>
     </div>
-</div>
+</div> -->
 <div class="d-flex flex-column w-100 h-100 position-relative bg-light-gray">
     <div class="wrapper">
         <div class="w-100 position-relative px-4 pt-5 d-flex" *ngIf="agentDetails">
@@ -74,10 +74,10 @@
                         <label class="font-12 text-secondary">Type</label>
                         <span class="fw-500 text-dark">{{agentDetails.type}}</span>
                     </div>
-                    <div class="d-flex flex-column mr-5">
+                    <!-- <div class="d-flex flex-column mr-5">
                         <label class="font-12 text-secondary">Streak</label>
                         <span class="fw-500 text-dark">{{agentDetails.type}}</span>
-                    </div>
+                    </div> -->
                     <div class="d-flex flex-column mr-5">
                         <label class="font-12 text-secondary">Status</label>
                         <span class="fw-500 status font-11" [ngClass]="{
@@ -96,21 +96,21 @@
                     </div>
                     <div class="d-flex flex-column mr-5">
                         <label class="font-12 text-secondary">Version</label>
-                        <span class="fw-500 text-dark">{{agentDetails._metadata.version.document}} </span>
+                        <span class="fw-500 text-dark">{{agentDetails.__v}} </span>
                     </div>
                     <div class="d-flex flex-column mr-5">
                         <label class="font-12 text-secondary">IP Address</label>
-                        <span class="fw-500 text-dark">{{agentLogObject[0].ipAddress}}</span>
+                        <span class="fw-500 text-dark">{{agentLogObject[0]?.ipAddress}}</span>
                     </div>
                     <div class="d-flex flex-column mr-5">
                         <label class="font-12 text-secondary">Mac Address</label>
-                        <span class="fw-500 text-dark">{{agentLogObject[0].macAddress}}</span>
+                        <span class="fw-500 text-dark">{{agentLogObject[0]?.macAddress}}</span>
                     </div>
                 </div>
             </div>
         </div>
         <div class="d-flex flex-column px-4 pb-4 bg-white">
-            <div class="grid-container position-relative mt-3" *ngIf="agentLogObject.length > 0">
+            <div class="grid-container position-relative mt-3" *ngIf="completeLogs.length > 0">
                 <div class="list-group">
                     <div
                         class="list-group-item header py-0 bg-light text-uppercase font-11 fw-500 d-flex align-items-center">
@@ -133,26 +133,52 @@
                             <!-- <div class="item-actions">&nbsp;</div> -->
                         </div>
                     </div>
+                    <div class="list-group-item header py-0 font-11 fw-500 d-flex align-items-center">
+                        <div class="d-flex align-items-center justify-content-start h-100">
+                            <div class="item-timestamp">
+                            </div>
+                            <div class="item-level">
+                                <select class="form-control font-11" style="width: 60%; height: 30px"
+                                    (change)="filterLevel($event)">
+                                    <option class="font-11" value="ALL">ALL</option>
+                                    <option class="font-11" value="TRACE">TRACE</option>
+                                    <option class="font-11" value="DEBUG">DEBUG</option>
+                                    <option class="font-11" value="INFO">INFO</option>
+                                    <option class="font-11" value="ERROR">ERROR</option>
+                                </select>
+                            </div>
+                            <!-- <div class="item-actions">&nbsp;</div> -->
+                        </div>
+                    </div>
                     <ng-container *ngFor="let agent of agentLogObject;let i=index">
                         <div class="list-group-item">
                             <div class="d-flex align-items-center justify-content-start h-100">
-                                <div class="item-timestamp text-truncate fw-500">{{convertDate(agent.timestamp )}}</div>
+                                <div class="item-timestamp text-truncate fw-500">{{agent?.timestamp &&
+                                    convertDate(agent.timestamp )}}</div>
                                 <div class="item-level ">
                                     <span class="font-11 fw-500 status" [ngClass]="{
-                                    'text-success': agent.level === 'TRACE',
-                                    'text-warning': agent.level === 'DEBUG',
-                                    'text-danger': agent.level === 'ERROR',
-                                    'text-info': agent.level === 'INFO'
-                                  }">{{agent.level}}</span>
+                                    'text-success': agent.logLevel === 'TRACE',
+                                    'text-warning': agent.logLevel === 'DEBUG',
+                                    'text-danger': agent.logLevel === 'ERROR',
+                                    'text-info': agent.logLevel === 'INFO'
+                                  }">{{agent.logLevel}}</span>
                                 </div>
-                                <div class="item-message text-secondary">{{agent.content}}</div>
+                                <div class="item-message text-secondary">{{agent.message}}</div>
                             </div>
                         </div>
                     </ng-container>
                 </div>
             </div>
-            <div class="d-flex flex-column">
-                <span *ngIf="agentLogObject.length === 0" class="no-logs">
+            <div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+                <div class="align-self-center text-center">
+                    <div class="spinner-border text-dark" role="status">
+                        <span class="sr-only">Processing...</span>
+                    </div>
+                    <div class="text-secondary mt-2">Processing...</div>
+                </div>
+            </div>
+            <div class="d-flex flex-column" *ngIf="agentLogObject.length === 0">
+                <span class="no-logs">
                 </span>
                 <div class="d-flex flex-column mx-auto">
                     <span class="font-20 fw-600">No Logs Generated</span>
