--- a/src/app/home/agents/agents-log/agents-log.component.scss
+++ b/src/app/home/agents/agents-log/agents-log.component.scss
@@ -7,8 +7,8 @@
 }
 
 .card-container {
-  height: calc(100vh - 214px);
-  // overflow: auto;
+  max-height: calc(100vh - 214px);
+  overflow: auto;
 }
 
 .platform {
@@ -85,7 +85,8 @@
 }
 
 .grid-container {
-  height: calc(100vh - 214px);
+  max-height: calc(100vh - 214px);
+  overflow: auto;
 
   .ag-grid-options {
     height: 32px;
