--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -33,7 +33,7 @@
                         <span *ngIf="sortModel['password']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['password']==-1" class="dsi dsi-drop-up"></span>
                     </div>
-                    <div (click)="applySort('ipAddress')" class="item-ip-address">
+                    <!-- <div (click)="applySort('ipAddress')" class="item-ip-address">
                         <span class="mr-2">IP Address</span>
                         <span *ngIf="sortModel['ipAddress']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['ipAddress']==-1" class="dsi dsi-drop-up"></span>
@@ -47,7 +47,7 @@
                         <span class="mr-2">Streak</span>
                         <span *ngIf="sortModel['streak']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['streak']==-1" class="dsi dsi-drop-up"></span>
-                    </div>
+                    </div> -->
                     <div (click)="applySort('status')" class="item-status">
                         <span class="mr-2">Status</span>
                         <span *ngIf="sortModel['status']==1" class="dsi dsi-drop-down"></span>
@@ -58,7 +58,7 @@
                         <span *ngIf="sortModel['lastInvokedAt']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['lastInvokedAt']==-1" class="dsi dsi-drop-up"></span>
                     </div>
-                    <div (click)="applySort('release')" class="item-release">
+                    <!-- <div (click)="applySort('release')" class="item-release">
                         <span class="mr-2">Release</span>
                         <span *ngIf="sortModel['release']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['release']==-1" class="dsi dsi-drop-up"></span>
@@ -67,7 +67,7 @@
                         <span class="mr-2">Pending Files</span>
                         <span *ngIf="sortModel['pendingFiles']==1" class="dsi dsi-drop-down"></span>
                         <span *ngIf="sortModel['pendingFiles']==-1" class="dsi dsi-drop-up"></span>
-                    </div>
+                    </div> -->
                     <div class="item-actions">&nbsp;</div>
                 </div>
             </div>
@@ -81,17 +81,17 @@
                             <button class="btn btn-link p-0 font-13" style="height: 24px"
                                 (click)="openAgentDetailsWindow(agent);">Show Password</button>
                         </div>
-                        <div class="item-ip-address">{{agent.ipAddress}}</div>
+                        <!-- <div class="item-ip-address">{{agent.ipAddress}}</div>
                         <div class="item-mac-address">{{agent.macAddress}}</div>
-                        <div class="item-streak">{{agent.streak}}</div>
+                        <div class="item-streak">{{agent.streak}}</div> -->
                         <div class="item-status"><span class="status font-11 fw-500" [ngClass]="{
                             'text-success': agent.status === 'RUNNING',
                             'text-warning': agent.status === 'PENDING',
                             'text-danger': agent.status === 'STOPPED'
                           }">{{agent.status}}</span></div>
                         <div class="item-last-invoked-at font-12">{{convertDate(agent._metadata.lastUpdated)}}</div>
-                        <div class="item-release">{{agent.release}}</div>
-                        <div class="item-pending-files">{{agent.pendingFiles}}</div>
+                        <!-- <div class="item-release">{{agent.release}}</div>
+                        <div class="item-pending-files">{{agent.pendingFiles}}</div> -->
                         <div class="item-actions d-flex align-items-center justify-content-end">
                             <span id="agent-view" class="fw-600 font-13 hover mr-3"
                                 [routerLink]="['/app/',app,'agent',agent._id]">View</span>
